Fixes to sign Amazon.Lambda.RuntimeSupport and Amazon.Lambda.RuntimeSupport.Test.

--- a/buildtools/common.props
+++ b/buildtools/common.props
@@ -7,7 +7,7 @@
     <Authors>Amazon Web Services</Authors>
 	
     <OutputType>Library</OutputType>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
 
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
 	
