--- a/Libraries/test/Amazon.Lambda.RuntimeSupport.Tests/Amazon.Lambda.RuntimeSupport.Test/Amazon.Lambda.RuntimeSupport.Test.csproj
+++ b/Libraries/test/Amazon.Lambda.RuntimeSupport.Tests/Amazon.Lambda.RuntimeSupport.Test/Amazon.Lambda.RuntimeSupport.Test.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>local-development.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
